@@ -1,3 +1,8 @@
+2006-10-27  Matt Rice <ratmice@yahoo.com>
+	
+	* Palettes/3Containers/GormTableViewEditor.m: Change documentRect to
+	documentVisibleRect.
+
 2006-10-23 01:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/GormHelpInspector.gorm: Change resize properties.
